# quantum-circuit-drawer

./: .gitignore  1_quantum_teleportation.ipynb  CHANGELOG.md  MANIFEST.in  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  pyproject.toml  qiskit_introduction.ipynb  test.py
.codex_demo_checks/2d/: public_api_utilities_showcase_histogram.csv  public_api_utilities_showcase_quantikz.tex
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml  security.yml
docs/: api.md  benchmarking-results.md  development.md  extended_guide.md  extensions.md  frameworks.md  getting-started.md  index.md  installation.md  recipes.md  troubleshooting.md  user-guide.md
docs/superpowers/plans/: 2026-04-18-3d-topology-menu.md  2026-04-27-managed-additional-shortcuts.md
docs/superpowers/specs/: 2026-04-14-examples-refresh-and-slider-text-design.md  2026-04-18-3d-topology-menu-design.md  2026-04-18-demo-3d-topology-menu-design.md  (+4 more)
examples/: README.md  __init__.py  _bootstrap.py  _compare_shared.py  _families.py  _histogram_shared.py  _render_support.py  _shared.py  caller_managed_axes_showcase.py  cirq_conditional_composite_example.py  cirq_deep_example.py  cirq_example.py  cirq_grover_example.py  cirq_native_controls_showcase.py  cirq_qaoa.py  cirq_qaoa_example.py  cirq_random.py  cirq_wide_example.py  cli_export_showcase.py  compare_circuits_composite_modes.py  compare_circuits_multi_transpile.py  compare_circuits_qiskit_transpile.py  compare_demo_catalog.py  compare_histograms_ideal_vs_sampled.py  compare_histograms_multi_series.py  cudaq_deep_example.py  cudaq_example.py  cudaq_kernel_showcase.py  cudaq_random.py  cudaq_wide_example.py  demo_catalog.py  diagnostics_showcase.py  histogram_binary_order.py  histogram_cirq_result.py  histogram_count_order.py  histogram_counts.py  histogram_cudaq_sample.py  histogram_demo_catalog.py  histogram_interactive_large.py  histogram_marginal.py  (+47 more)
scripts/: benchmark_render.py  clean.bat  clean.py  debug_slider_trace.py
src/quantum_circuit_drawer/: __init__.py  _compat.py  _draw_managed.py  _draw_managed_page_window.py  _draw_managed_page_window_3d.py  _draw_managed_slider.py  _draw_managed_topology_menu.py  _draw_managed_viewport.py  _draw_managed_zoom.py  _draw_pipeline.py  _draw_request.py  _interactive_logging.py  _ipython_display.py  _logging.py  _managed_3d_view_state.py  _managed_ui_palette.py  _matrix_support.py  _runtime_context.py  _scene_pages.py  _support_matrix.py  _validation.py  _version.py  analysis.py  api.py  builder.py  circuit_compare.py  cli.py  config.py  diagnostics.py  exceptions.py  histogram.py  hover.py  latex.py  logging.py  presets.py  result.py  topology.py  typing.py
tests/: _api_managed_rendering_support.py  _matplotlib_renderer_support.py  conftest.py  paths.py  support.py  test_adapter_helpers.py  test_adapter_registry.py  test_api.py  test_api_3d.py  test_api_contracts.py  test_api_managed_rendering.py  test_api_managed_rendering_page_window.py  test_api_managed_rendering_slider_2d.py  test_api_managed_rendering_topology.py  test_api_managed_rendering_zoom.py  test_api_v2_contracts.py  test_api_v2_draw_result_compare_circuits.py  test_api_v2_modes_2d.py  test_api_v2_modes_3d.py  test_api_v2_pages_controls_3d.py  test_api_v2_style_theme.py  test_api_v2_topology_builder_qasm.py  test_benchmark_script.py  test_cirq_adapter.py  test_clean_script.py  test_cudaq_adapter.py  test_cudaq_adapter_integration.py  test_domain_modularization.py  test_draw_pipeline.py  test_example_support.py  test_examples_runner.py  test_extensions_api.py  test_formatting.py  test_histogram.py  test_histogram_example_support.py  test_histogram_examples_runner.py  test_histogram_interactive.py  test_ir.py  test_layout.py  test_layout_3d.py  (+11 more)
tests/adapters/: __init__.py  test_adapter_helpers.py  test_cirq_adapter.py  test_cirq_adapter_contract.py  test_cudaq_adapter.py  test_cudaq_adapter_integration.py  test_myqlm_adapter.py  test_pennylane_adapter.py  test_pennylane_adapter_contract.py  test_qiskit_adapter.py
tests/core/: __init__.py  test_analysis.py  test_api_3d.py  test_api_contracts.py  test_api_v2_contracts.py  test_api_v2_diagnostics_presets_compare.py  test_api_v2_draw_result_compare_circuits.py  test_api_v2_modes_2d.py  test_api_v2_modes_3d.py  test_api_v2_pages_controls_3d.py  test_api_v2_topology_builder_qasm.py  test_benchmark_script.py  test_builder.py  test_ci_workflow.py  test_clean_script.py  test_cli.py  test_compare_semantic_ir.py  test_compat.py  test_domain_modularization.py  test_extensions_api.py  test_formatting.py  test_ir.py  test_latex_export.py  test_logging_api.py  test_notebook_output.py  test_optional_imports.py  test_package_import.py  test_presets.py  test_public_docstrings.py  test_result_exports.py  test_style_validation.py  test_support_policy.py  test_topology_qiskit_backend.py
tests/drawing/: __init__.py  test_draw_pipeline.py  test_drawing_refactor_boundaries.py
tests/examples/: __init__.py  test_compare_example_support.py  test_compare_examples_runner.py  test_example_support.py  test_examples_refactor_surface.py  test_examples_runner.py  test_histogram_example_support.py  test_histogram_examples_runner.py  test_qiskit_exploration_cli_args.py
tests/ir/: test_semantic_ir.py
tests/layout/: __init__.py  test_3d_layout_refactor_boundaries.py  test_layout.py  test_layout_3d.py  test_matrix_support.py  test_semantic_layout.py
tests/managed/: __init__.py  test_2d_exploration.py  test_3d_exploration.py  test_api_managed_rendering_page_window.py  test_api_managed_rendering_slider_2d.py  test_api_managed_rendering_slider_3d.py  test_api_managed_rendering_topology.py  test_api_managed_rendering_zoom.py  test_interaction.py
tests/plots/: __init__.py  test_histogram.py  test_histogram_frameworks.py  test_histogram_interactive.py  test_histogram_models.py  test_histogram_qiskit.py  test_histogram_refactor_boundaries.py
tests/renderers/: __init__.py  test_matplotlib_renderer_hover.py  test_matplotlib_renderer_primitives.py  test_matplotlib_renderer_text.py
(+128 files in other folders)
