[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-circuit-drawer"
version = "0.1.0"
description = "Backend-agnostic quantum circuit drawing library with Matplotlib as the first renderer."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Alejandro Mata Ali" },
]
keywords = ["quantum", "qiskit", "cirq", "matplotlib", "visualization"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.24",
]

[project.optional-dependencies]
qiskit = [
  "qiskit>=1.0",
]
cirq = [
  "cirq-core>=1.3",
]
pennylane = [
  "pennylane>=0.35",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "build>=1.2",
  "twine>=5.1",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quantum_circuit_drawer = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers -p no:cacheprovider"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests", "examples"]
extend-exclude = [".pytest_tmp", "test_tmp"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/test_cirq_adapter.py" = ["E402"]
"tests/test_qiskit_adapter.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
files = [
  "src/quantum_circuit_drawer/api.py",
  "src/quantum_circuit_drawer/exceptions.py",
  "src/quantum_circuit_drawer/typing.py",
  "src/quantum_circuit_drawer/style",
  "src/quantum_circuit_drawer/ir",
  "src/quantum_circuit_drawer/utils/formatting.py",
]
mypy_path = "src"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
