[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-circuit-drawer"
description = "Backend-agnostic quantum circuit drawing library with Matplotlib as the first renderer."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_LICENSES.md"]
dynamic = ["version"]
authors = [
  { name = "Alejandro Mata Ali" },
]
keywords = ["quantum", "qiskit", "cirq", "matplotlib", "visualization"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/DOKOS-TAYOS/quantum-circuit-drawer"
Documentation = "https://github.com/DOKOS-TAYOS/quantum-circuit-drawer/blob/main/docs/index.md"
Repository = "https://github.com/DOKOS-TAYOS/quantum-circuit-drawer"
Issues = "https://github.com/DOKOS-TAYOS/quantum-circuit-drawer/issues"
Changelog = "https://github.com/DOKOS-TAYOS/quantum-circuit-drawer/blob/main/CHANGELOG.md"

[project.optional-dependencies]
qiskit = [
  "qiskit>=1.0",
]
qasm3 = [
  "qiskit>=1.0",
  "qiskit-qasm3-import",
]
cirq = [
  "cirq-core>=1.3",
]
pennylane = [
  "pennylane>=0.35",
]
myqlm = [
  "myqlm>=1.11",
]
cudaq = [
  "cudaq>=0.13; platform_system == 'Linux'",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "pyright>=1.1.403",
  "build>=1.2",
  "twine>=5.1",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quantum_circuit_drawer = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "quantum_circuit_drawer._version.__version__" }

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers -p no:cacheprovider"
markers = [
  "integration: tests that exercise real optional framework packages or subprocess flows",
  "optional: tests for optional framework adapters and examples",
  "renderer: tests that inspect Matplotlib rendering output",
  "slow: tests that are useful but slower than the normal unit test path",
  "unit: deterministic tests that avoid real optional framework dependencies",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "examples"]
extend-exclude = [".pytest_tmp", "test_tmp"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/adapters/test_cudaq_adapter_integration.py" = ["F821"]
"tests/adapters/test_cirq_adapter.py" = ["E402"]
"tests/adapters/test_qiskit_adapter.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
files = ["src/quantum_circuit_drawer"]
mypy_path = "src"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "cirq",
  "cudaq",
  "pennylane",
  "qat",
  "qat.*",
  "qiskit",
  "qiskit.*",
]
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = [
  "src/quantum_circuit_drawer/typing.py",
  "src/quantum_circuit_drawer/topology.py",
  "src/quantum_circuit_drawer/style/defaults.py",
  "examples/_shared.py",
  "scripts/benchmark_render.py",
]
exclude = [
  ".venv",
  ".worktrees",
  "tests",
]
reportMissingImports = "none"
reportMissingModuleSource = "none"
executionEnvironments = [
  { root = ".", extraPaths = ["src"] },
]

[tool.coverage.run]
source = ["quantum_circuit_drawer"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
